--- a/spec/CMakeLists.txt
+++ b/spec/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable( tests runner.cpp )
-target_link_libraries( tests brandtgc c++spec )
+target_link_libraries( tests brandtgc c++spec ${CMAKE_THREAD_LIBS_INIT} )
 
