--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,11 @@ project( BrandtGC )
 
 cmake_minimum_required( VERSION 3.1 )
 
-set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror" )
-set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Werror")
+set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -pedantic -Wall -Werror" )
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Werror")
 
-find_package( Threads )
+set(THREADS_PREFER_PTHREAD_FLAG ON )
+find_package( Threads REQUIRED )
 
 include_directories( include )
 add_subdirectory( src )
