First working version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,20 +7,16 @@ set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Werror")
 
 set(THREADS_PREFER_PTHREAD_FLAG ON )
 find_package( Threads REQUIRED )
+find_library( CALLBACK_LIB libcallback.a )
 
+add_subdirectory(lib)
 include_directories( include )
 add_subdirectory( src )
 
-
 option ( BUILD_TESTS "Build tests." ON )
 if ( BUILD_TESTS )
-
-  # C++Spec library
-  add_subdirectory( cppspec )
-
   enable_testing ()
 
   # Tests
   add_subdirectory( spec )
-
 endif ( BUILD_TESTS )
