--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,18 @@
-add_library( brandtgc 
+add_library( brandtgc
   bit.c
   complock.c
-  object.c
-)
+  idbaseobject.c
+  wrappedlock.c
+  counter.c
+  locker.c
+  link.c
+  object.c collector.c safelist.c xthread.c root.c worker.c)
+
+target_link_libraries(brandtgc collectc ${CALLBACK_LIB} ${CMAKE_THREAD_LIBS_INIT})
+if(UNIX)
+    target_link_libraries(brandtgc m)
+endif(UNIX)
+
+
+add_executable( run main.c )
+target_link_libraries( run brandtgc )
