--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,40 @@
- language: cpp
+language: cpp
 
- compiler:
-   - clang
-   - gcc
+compiler:
+  - clang
+  - gcc
 
- before_install:
-   - |
-     if [[ "${TRAVIS_OS_NAME}" = "osx" ]]; then
-       brew update
-       brew install cmake
-     fi
+before_install:
+  - |
+    if [[ "${TRAVIS_OS_NAME}" = "osx" ]]; then
+      brew update
+      brew install cmake
+    fi
 
- install:
-   - if [ "$CC" = "gcc" ]; then export CXX="g++-7" CC="gcc-7"; fi
-   - if [ "$CC" = "clang" ]; then export CXX="clang++-5.0" CC="clang-5.0"; fi
+install:
+  - if [ "$CC" = "gcc" ]; then export CXX="g++-7" CC="gcc-7"; fi
+  - if [ "$CC" = "clang" ]; then export CXX="clang++-5.0" CC="clang-5.0"; fi
 
- before_script:
-   - mkdir build
-   - cd build
-   - cmake ..
+before_script:
+  - mkdir build
+  - cd build
+  - cmake ..
 
- script:
-   - make
-   - make spec
+script:
+  - make
+  - make spec
 
- os:
-   - linux
- #  - osx
+os:
+  - linux
+#  - osx
 
- addons:
-   apt:
-     sources:
-       - george-edison55-precise-backports
-       - ubuntu-toolchain-r-test
-       - llvm-toolchain-precise-5.0
-     packages:
-       - cmake-data
-       - cmake
-       - g++-7
-       - clang-5.0
+dist: trusty
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-trusty-5.0
+    packages:
+      - g++-7
+      - clang-5.0
