--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,16 @@
-add_library( brandtgc
+add_library(brandtgc
+        acid.c
         complock.c
-  idbaseobject.c
-  wrappedlock.c
+        idbaseobject.c
+        wrappedlock.c
         locker.c
-  link.c
-  object.c collector.c safelist.c task.c root.c worker.c)
+        link.c
+        object.c
+        collector.c
+        safelist.c
+        task.c
+        root.c
+        worker.c)
 
 target_link_libraries(brandtgc collectc tinycthread ${CMAKE_THREAD_LIBS_INIT})
 if(UNIX)
