Safer memory allocation (in theory, need to test for real)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(acid
         acid.c idlock.c locker.c link.c
         object.c collector.c safelist.c
-        task.c worker.c
+        task.c worker.c memory.c
         $<TARGET_OBJECTS:collectc> $<TARGET_OBJECTS:tinycthread>)
 
 target_link_libraries(acid ${CMAKE_THREAD_LIBS_INIT})
