--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,13 @@ set( Acid_VERSION_MINOR 1 )
 set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -pedantic -Wall -Werror -Wno-extended-offsetof" )
 set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Werror")
 
-set(THREADS_PREFER_PTHREAD_FLAG ON )
-find_package( Threads REQUIRED )
+INCLUDE(CheckIncludeFiles)
+CHECK_INCLUDE_FILES(threads.h HAVE_THREADS_H)
+
+if(NOT HAVE_THREADS_H)
+  set(THREADS_PREFER_PTHREAD_FLAG ON )
+  find_package( Threads )
+endif()
 
 add_subdirectory( lib )
 include_directories( include lib )
