Gypsum examples (failing)

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable( run main.c )
 target_link_libraries( run acid )
+
+add_executable(gypsum gypsum.c stack.c)
+target_link_libraries(gypsum acid)
