--- a/lib/collectc/CMakeLists.txt
+++ b/lib/collectc/CMakeLists.txt
@@ -1,3 +1,4 @@
 file(GLOB source_files "*.c")
 
-add_library(collectc OBJECT ${source_files})
+add_library(collectc STATIC ${source_files})
+set_target_properties(collectc PROPERTIES C_VISIBILITY_PRESET hidden)
