--- a/lib/tinycthread/CMakeLists.txt
+++ b/lib/tinycthread/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_library(tinycthread OBJECT tinycthread.c)
+add_library(tinycthread STATIC tinycthread.c)
+target_link_libraries(tinycthread ${CMAKE_THREAD_LIBS_INIT})
+set_target_properties(tinycthread PROPERTIES C_VISIBILITY_PRESET hidden)
